🔥feat: bundle apk and fix local storage to api

--- a/app.json
+++ b/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.FEBMC"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d9cbd2ce-f9be-4764-ac6f-26f71ea694be"
+      }
     }
   }
 }
