--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "RuangBunda Bidan",
-    "slug": "ruangbunda-bidan",
+    "slug": "FE-BMC",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
