--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.20",
     "expo": "~54.0.23",
+    "expo-dev-client": "~6.0.18",
     "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "fontawesome": "^5.6.3",
