--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.FEBMC",
       "useNextNotificationsApi": true,
+      "googleServicesFile" : "./google-services.json",
       "permissions": [
         "android.permission.NOTIFICATIONS",
         "android.permission.SCHEDULE_EXACT_ALARM",
