--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.20",
     "expo": "~54.0.29",
+    "expo-constants": "~18.0.12",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
